# pattern-static-analysis

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conf.json  test.c
include/analyzer/: AnalysisResult.h  AnalyzerConfig.h  DependenceChecker.h  FingerprintBuilder.h  LoopCollector.h  MemoryAccessAnalyzer.h  PatternClassifier.h  PatternExtractor.h  PatternSerializer.h  PatternTypes.h  ScevAnalyzer.h
src/: AnalysisResult.cpp  AnalyzerConfig.cpp  DependenceChecker.cpp  FingerprintBuilder.cpp  LoopCollector.cpp  MemoryAccessAnalyzer.cpp  PatternClassifier.cpp  PatternExtractor.cpp  PatternSerializer.cpp  PatternTypes.cpp  ScevAnalyzer.cpp  main.cpp
